# bajaj-finserv-rag-system

./: README.md  main.py  pyproject.toml
Document_Ingestion/: document.py
api/: main.py  models.py
document_ingestion/: document.py
